--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,16 @@
     <name>Bookshelf</name>
     <description>Bookshelf OSGi App.</description>
 
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.osgi</groupId>
+                <artifactId>org.osgi.core</artifactId>
+                <version>4.3.1</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
     <packaging>pom</packaging>
     <modules>
         <module>inventory-api</module>
