--- a/pom.xml
+++ b/pom.xml
@@ -10,15 +10,6 @@
     <name>Bookshelf</name>
     <description>Bookshelf OSGi App.</description>
 
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>org.osgi</groupId>
-                <artifactId>org.osgi.core</artifactId>
-                <version>4.3.1</version>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
 
     <packaging>pom</packaging>
     <modules>
@@ -26,6 +17,7 @@
         <module>inventory-api-impl-mock</module>
         <module>service</module>
         <module>service-tui</module>
+        <module>service-fxgui</module>
     </modules>
 
 
