--- a/inventory-api-impl-mock/pom.xml
+++ b/inventory-api-impl-mock/pom.xml
@@ -21,6 +21,7 @@
         <dependency>
             <groupId>org.osgi</groupId>
             <artifactId>org.osgi.core</artifactId>
+            <version>4.3.1</version>
         </dependency>
     </dependencies>
 
