--- a/service-tui/pom.xml
+++ b/service-tui/pom.xml
@@ -18,6 +18,7 @@
         <dependency>
             <groupId>org.osgi</groupId>
             <artifactId>org.osgi.core</artifactId>
+            <version>4.3.1</version>
         </dependency>
 
         <dependency>
