--- a/service/pom.xml
+++ b/service/pom.xml
@@ -20,6 +20,7 @@
         <dependency>
             <groupId>org.osgi</groupId>
             <artifactId>org.osgi.core</artifactId>
+            <version>4.3.1</version>
         </dependency>
 
     </dependencies>
